Added data preprocessing & cleaned dataset-corrected

--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "08845b5a-e29d-401a-910c-20b82f2923a4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "b0909e3b-fa1f-4d4d-b76c-1e0300feb69b",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "id": "28337e38-0c2b-4f2a-8ede-de0f96ae1a38",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "bf591b6e-3be6-4448-8d8b-9a8a4fddf1a5",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "id": "77194b7b-f608-4a44-b2f6-d39cf7f55745",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "id": "f7d0a964-9596-4105-83db-c2dbb79ac060",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "e21bdf44-194e-4be1-8512-3b56b1c0075d",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,233 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
+   "id": "fd997f9f-16b9-4c75-9614-a30e837a8d36",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>Limit_Balance</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Repay_Sept</th>\n",
+       "      <th>Repay_Aug</th>\n",
+       "      <th>Repay_July</th>\n",
+       "      <th>Repay_June</th>\n",
+       "      <th>Repay_May</th>\n",
+       "      <th>Repay_April</th>\n",
+       "      <th>Bill_Sept</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Pay_April</th>\n",
+       "      <th>Default_Next_Month</th>\n",
+       "      <th>Gender_Male</th>\n",
+       "      <th>Education_Graduate</th>\n",
+       "      <th>Education_High School</th>\n",
+       "      <th>Education_Other</th>\n",
+       "      <th>Education_University</th>\n",
+       "      <th>Marital_Status_Married</th>\n",
+       "      <th>Marital_Status_Other</th>\n",
+       "      <th>Marital_Status_Single</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20000</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>-2</td>\n",
+       "      <td>3913</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>120000</td>\n",
+       "      <td>26</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2682</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>90000</td>\n",
+       "      <td>34</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29239</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46990</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>57</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8617</td>\n",
+       "      <td>...</td>\n",
+       "      <td>679</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 30 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID  Limit_Balance  Age  Repay_Sept  Repay_Aug  Repay_July  Repay_June  \\\n",
+       "0   1          20000   24           2          2          -1          -1   \n",
+       "1   2         120000   26          -1          2           0           0   \n",
+       "2   3          90000   34           0          0           0           0   \n",
+       "3   4          50000   37           0          0           0           0   \n",
+       "4   5          50000   57          -1          0          -1           0   \n",
+       "\n",
+       "   Repay_May  Repay_April  Bill_Sept  ...  Pay_April  Default_Next_Month  \\\n",
+       "0         -2           -2       3913  ...          0                   1   \n",
+       "1          0            2       2682  ...       2000                   1   \n",
+       "2          0            0      29239  ...       5000                   0   \n",
+       "3          0            0      46990  ...       1000                   0   \n",
+       "4          0            0       8617  ...        679                   0   \n",
+       "\n",
+       "   Gender_Male  Education_Graduate  Education_High School  Education_Other  \\\n",
+       "0        False               False                  False            False   \n",
+       "1        False               False                  False            False   \n",
+       "2        False               False                  False            False   \n",
+       "3        False               False                  False            False   \n",
+       "4         True               False                  False            False   \n",
+       "\n",
+       "   Education_University  Marital_Status_Married  Marital_Status_Other  \\\n",
+       "0                  True                    True                 False   \n",
+       "1                  True                   False                 False   \n",
+       "2                  True                   False                 False   \n",
+       "3                  True                    True                 False   \n",
+       "4                  True                    True                 False   \n",
+       "\n",
+       "   Marital_Status_Single  \n",
+       "0                  False  \n",
+       "1                   True  \n",
+       "2                   True  \n",
+       "3                  False  \n",
+       "4                  False  \n",
+       "\n",
+       "[5 rows x 30 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encoded = pd.get_dummies(df, columns=[\"Gender\", \"Education\", \"Marital_Status\"], drop_first=True)\n",
+    "\n",
+    "df_encoded.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "e0935fc9-4862-4139-8e97-e7f3f5c35fad",
    "metadata": {},
    "outputs": [],
@@ -579,7 +805,7 @@
     }
    ],
    "source": [
-    "df[\"Default_Next_Month\"].value_counts(normalize=True)\n"
+    "\n"
    ]
   },
   {
