saved models to models folder

--- a/notebooks/02_preprocessing.ipynb
+++ b/notebooks/02_preprocessing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "08845b5a-e29d-401a-910c-20b82f2923a4",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "b0909e3b-fa1f-4d4d-b76c-1e0300feb69b",
    "metadata": {},
    "outputs": [
@@ -228,7 +228,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "id": "28337e38-0c2b-4f2a-8ede-de0f96ae1a38",
    "metadata": {},
    "outputs": [],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "bf591b6e-3be6-4448-8d8b-9a8a4fddf1a5",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "id": "77194b7b-f608-4a44-b2f6-d39cf7f55745",
    "metadata": {},
    "outputs": [],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "f7d0a964-9596-4105-83db-c2dbb79ac060",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "e21bdf44-194e-4be1-8512-3b56b1c0075d",
    "metadata": {},
    "outputs": [
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "id": "fd997f9f-16b9-4c75-9614-a30e837a8d36",
    "metadata": {},
    "outputs": [
@@ -763,7 +763,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,36 +776,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "e0935fc9-4862-4139-8e97-e7f3f5c35fad",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"../data/cleaned_credit_data.csv\", index=False)"
+    "df_encoded.to_csv(\"../data/cleaned_credit_data.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "5c51d0bf-a3df-4067-b9b8-0499820e464f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Default_Next_Month\n",
-       "0    0.7788\n",
-       "1    0.2212\n",
-       "Name: proportion, dtype: float64"
+       "Index(['ID', 'Limit_Balance', 'Age', 'Repay_Sept', 'Repay_Aug', 'Repay_July',\n",
+       "       'Repay_June', 'Repay_May', 'Repay_April', 'Bill_Sept', 'Bill_Aug',\n",
+       "       'Bill_July', 'Bill_June', 'Bill_May', 'Bill_April', 'Pay_Sept',\n",
+       "       'Pay_Aug', 'Pay_July', 'Pay_June', 'Pay_May', 'Pay_April',\n",
+       "       'Default_Next_Month', 'Gender_Male', 'Education_Graduate',\n",
+       "       'Education_High School', 'Education_Other', 'Education_University',\n",
+       "       'Marital_Status_Married', 'Marital_Status_Other',\n",
+       "       'Marital_Status_Single'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n"
+    "df_encoded.columns\n"
    ]
   },
   {
