--- a/notebooks/04_model_training.ipynb
+++ b/notebooks/04_model_training.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f43cf4b8-2415-45b8-b64c-5d4fce1632e0",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1011,13 +1013,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4a4cd38d-bcb2-4d24-83a2-e2f474c62eea",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic Regression AUC-ROC Score: 0.6477\n",
+      "Logistic Regression Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.74      0.80      4673\n",
+      "           1       0.38      0.55      0.45      1327\n",
+      "\n",
+      "    accuracy                           0.70      6000\n",
+      "   macro avg       0.62      0.65      0.62      6000\n",
+      "weighted avg       0.75      0.70      0.72      6000\n",
+      "\n",
+      "Decision Tree AUC-ROC Score: 0.6732\n",
+      "Decision Tree Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.89      0.87      4673\n",
+      "           1       0.54      0.46      0.49      1327\n",
+      "\n",
+      "    accuracy                           0.79      6000\n",
+      "   macro avg       0.69      0.67      0.68      6000\n",
+      "weighted avg       0.78      0.79      0.79      6000\n",
+      "\n",
+      "XGBoost AUC-ROC Score: 0.6568\n",
+      "XGBoost Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.92      0.88      4673\n",
+      "           1       0.57      0.40      0.47      1327\n",
+      "\n",
+      "    accuracy                           0.80      6000\n",
+      "   macro avg       0.71      0.66      0.67      6000\n",
+      "weighted avg       0.78      0.80      0.79      6000\n",
+      "\n",
+      "RF AUC-ROC Score: 0.6721\n",
+      "RF Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.91      0.88      4673\n",
+      "           1       0.58      0.43      0.50      1327\n",
+      "\n",
+      "    accuracy                           0.81      6000\n",
+      "   macro avg       0.72      0.67      0.69      6000\n",
+      "weighted avg       0.79      0.81      0.79      6000\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Evaluate models\n",
-    "models = {\"Logistic Regression\": log_reg, \"Decision Tree\": tree_clf, \"XGBoost\": xgb_clf, \"RF\": xgb_clf}\n",
+    "models = {\"Logistic Regression\": log_reg, \"Decision Tree\": tree_clf, \"XGBoost\": xgb_clf, \"RF\": rf_clf}\n",
     "\n",
     "for name, model in models.items():\n",
     "    y_pred = model.predict(X_test)\n",
@@ -1025,6 +1080,14 @@
     "    print(f\"{name} AUC-ROC Score: {auc:.4f}\")\n",
     "    print(f\"{name} Classification Report:\\n\", classification_report(y_test, y_pred))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76b1cb46-5d51-44f1-9468-e14cefbaaa43",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
