--- a/notebooks/04_model_training.ipynb
+++ b/notebooks/04_model_training.ipynb
@@ -1083,8 +1083,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "0d8250b2-7e5c-498c-9872-06cadebf49b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: joblib in d:\\repo\\hr edited\\myenv\\lib\\site-packages (1.4.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "76b1cb46-5d51-44f1-9468-e14cefbaaa43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Models saved successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save models\n",
+    "joblib.dump(log_reg, \"../models/logistic_regression.pkl\")\n",
+    "joblib.dump(tree_clf, \"../models/decision_tree.pkl\")\n",
+    "joblib.dump(rf_clf, \"../models/random_forest.pkl\")\n",
+    "joblib.dump(xgb_clf, \"../models/xgboost.pkl\")\n",
+    "\n",
+    "print(\"✅ Models saved successfully!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9d62e05d-3c65-4beb-932b-cbde4a76ae9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved Models: ['decision_tree.pkl', 'logistic_regression.pkl', 'random_forest.pkl', 'xgboost.pkl']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(\"Saved Models:\", os.listdir(\"../models/\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec39478d-621a-42ab-9b21-3b34b6680623",
    "metadata": {},
    "outputs": [],
    "source": []
